# looksatwords

./: .gitignore  README.md  flow.ipynb  pyproject.toml  runme.ipynb
looksatwords/: __main__.py  analyzer.py  dataio.py  gatherer.py  generator.py  hud.py  llm.py  logs.py  orchestrator.py  validator.py  visualizer.py
looksatwords/notebooks/: analyzer.ipynb  gatherer.ipynb  generator.ipynb  orchestrator.ipynb  visualizer.ipynb
looksatwords/tests/: test_analyzer.py  test_dataio.py  test_gatherer.py  test_generator.py  test_orchestrator.py  test_visualizer.py
